--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,23 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  layouts:
+    application: 
+      title: "The Pragmatic Bookshelf"
+      home: "Homw"
+      questions: "Questions"
+      news: "New"
+      contact: "Contact"
+
+  store:
+    index:
+      title_html:  "Your Pragmatic Catalog"
+      add_html:   "Add to Cart"
+
+  carts:
+    cart: 
+      title: "Your Cart"
+      empty: "Empty cart"
+      checkout: "Checkout"
+
+
